--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/common/IconWeb.svg"/>
+    <link rel="icon" type="image/svg+xml" href="src/common/icons/IconWeb.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmder</title>
   </head>
